fixed datepicker bleeding through floating menu

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -55,6 +55,7 @@ body {
   width: 100%;
   position: fixed;
   top: 0; left: 0;
+  z-index: 1;
   background-color: $background0;
 }
 
@@ -69,6 +70,7 @@ body {
   top: 0; bottom: 0;
   left: 0; right: 0;
   margin: auto;
+  z-index: 2;
 
   background-color: $background3;
   box-shadow: $floatingShadow;
